<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ededed">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        card_view:cardCornerRadius="2dp"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        card_view:cardElevation="1.5dp"
        android:layout_marginBottom="9dp">

        <RelativeLayout
            android:id="@+id/top_layout"
            android:layout_width="wrap_content"
            android:layout_height="338dp"
            android:longClickable="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/topHalf"
            android:background="@color/primary"
            android:transitionName="@string/transition_name_top">

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="30sp"-->
                <!--android:id="@+id/phoneNumberLableMain"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:text="Number: "-->
                <!--android:textColor="#ffffff"-->
                <!--android:elegantTextHeight="false"-->
                <!--android:layout_centerVertical="true"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/phoneNumberLableHash"
                android:transitionName="@string/transition_name_number"
                android:textColor="#ffffff"
                android:elegantTextHeight="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Hash"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/phoneNumberLable"
                android:transitionName="@string/transition_name_number"
                android:textColor="#ffffff"
                android:elegantTextHeight="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/contactNameLable"
                android:transitionName="@string/transition_name_number"
                android:textColor="#ffffff"
                android:elegantTextHeight="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:text="John Doe"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_outline_white_24dp"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:id="@+id/infoBttn"/>
            <!--<View-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_height="1dp"-->
                <!--android:background="#b6b6b6"-->
                <!--android:layout_below="@id/phoneNumberLable"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_marginRight="5dp"-->
                <!--android:id="@+id/div" />-->
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/topHalf">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/receivedLabel"
                android:textSize="24sp"
                android:text="Received: "
                android:textColor="#00cc00"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_centerVertical="true"
                android:transitionName="@string/transition_name_received_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/received"
                android:textSize="24sp"
                android:textColor="#00cc00"
                android:layout_marginTop="15dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/receivedLabel"
                android:layout_toEndOf="@id/receivedLabel"
                android:transitionName="@string/transition_name_received"/>

            <!--<View-->
                <!--android:layout_height="30dp"-->
                <!--android:layout_width="1dp"-->
                <!--android:background="#b6b6b6"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_marginLeft="25dp"-->
                <!--android:id="@+id/div2"-->
                <!--android:layout_toRightOf="@id/received"-->
                <!--android:layout_toEndOf="@id/received"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sentLabel"
                android:textSize="24sp"
                android:text="Sent: "
                android:textColor="#1976D2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/received"
                android:layout_toEndOf="@id/received"
                android:transitionName="@string/transition_name_sent_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sent"
                android:textSize="24sp"
                android:textColor="#1976D2"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/sentLabel"
                android:layout_toEndOf="@id/sentLabel"
                android:transitionName="@string/transition_name_sent"/>

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
